--- a/Project_try3/Readme
+++ b/Project_try3/Readme
@@ -7,7 +7,9 @@ if username in usernamedic.viewvalues():
   inputpassward = input("passward: ")
   if inputpassward in usernamedic.values() :
     然后就可以用client进行交流，但是问题是如何进行下一步
-    正常流程是输入用户名，然后直接开始聊天，现在多出一这一部分，想下怎么做，也可能是我想多了。
+    正常流程是输入用户名，然后直接开始聊天，现在多出一这一部分。
+    可以使用while Ture：来完成
+    我认为是可行的，但是现在没法直接验证。
   else:
     inputpassward = input("Error/n PLZ try again/npassward: ")
 else:
